--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.7",
+    "pdf": "^0.1.0",
+    "pdfkit": "^0.14.0",
     "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "xlsx": "^0.18.5"
   }
 }
